--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Francois+One&display=swap');
 
-*, body {
+*,
+body {
   margin: 0px;
   padding: 0px;
 }
@@ -21,6 +22,10 @@ footer {
   background-color: #5B44FB;
   height: 200px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 h4 {
