Alteração de css + inputRange check

--- a/gerador-senhas/css/style.css
+++ b/gerador-senhas/css/style.css
@@ -148,7 +148,7 @@ h1 {
   gap: 50px;
   margin: 50px 0;
   background-color: #CCCCCC;
-  padding: 50px;
+  padding: 50px 0;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   text-align: center;
