--- a/gerador-senhas/css/style.css
+++ b/gerador-senhas/css/style.css
@@ -196,7 +196,7 @@ input[type="range"]::-webkit-slider-thumb {
   flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 5px;
   min-width: 150px;
   padding: 0 50px;
   flex: 1 0 150px;
@@ -263,7 +263,7 @@ input[type="range"]::-webkit-slider-thumb {
   }
 
   .inputs {
-    width: 600px;
+    width: 600px !important;
     height: auto;
     flex-wrap: wrap;
     justify-content: center;
@@ -302,7 +302,7 @@ input[type="range"]::-webkit-slider-thumb {
 @media only screen and (max-width: 425px) {
 
   .inputs {
-    width: 90%;
+    width: 90% !important;
     flex-wrap: wrap;
   }
 
@@ -317,6 +317,10 @@ input[type="range"]::-webkit-slider-thumb {
   }
 
   .boxFormulario {
+    width: 300px;
+  }
+
+  .btnIndex {
     width: 300px;
   }
 
